--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ header > h1 {
 
 header > p {
     padding-bottom: 50px;
+    padding-top: 20px;
+    font-size: 1.4em;
 }
 
 a {
@@ -60,11 +62,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 2.5vw;
+    font-size: 3.5vw;
 }
 
 section > p {
-    padding-bottom: 2em;
+    padding-bottom: 1em;
 }
 
 section.normal {
